# TEROS

./: .gitignore  DEPLOYMENT.md  GIT_PUSH_GUIDE.md  LICENSE  README.md  next.config.ts  package-lock.json  package.json  sync-server.js
backend/: CMakeLists.txt  Dockerfile
backend/.cache/clangd/index/: AIRoutingEngine.cpp.96DB163B1EEECAF7.idx  AIRoutingEngine.h.D3734A22D515E014.idx  GlobalState.cpp.44FDE7CCF06ECC2D.idx  GlobalState.h.23B6609B33B6571B.idx  StateMachine.cpp.F96CA3FBEE4E3B3F.idx  StateMachine.h.302E7D6BE04BE36D.idx  Telemetry.cpp.CEBD9FD0B27B7B5B.idx  Telemetry.h.491784604B015199.idx  Trip.h.3DE2E6D327C4B93F.idx  User.h.7AE6518D9BC281AB.idx  WebsocketServer.cpp.59A66FBB2202C548.idx  WebsocketServer.h.7E7F880FE327B1B2.idx  main.cpp.01765669A75276A7.idx
backend/src/: main.cpp
backend/src/core/: GlobalState.cpp  GlobalState.h  StateMachine.cpp  StateMachine.h
backend/src/geo/: Telemetry.cpp  Telemetry.h
backend/src/models/: Trip.h  User.h
backend/src/routing/: AIRoutingEngine.cpp  AIRoutingEngine.h
backend/src/server/: WebsocketServer.cpp  WebsocketServer.h
public/: manifest.json  robots.txt
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: page.tsx
src/app/driver/: page.tsx
src/app/hospital/: page.tsx
src/app/login/: page.tsx
src/app/patient/: page.tsx
src/app/simulation/: page.tsx
src/components/: ThemeProvider.tsx
src/components/layout/: Header.tsx
src/components/map/: DynamicMap.tsx  MapComponent.tsx
src/lib/: AppContext.tsx  AuthContext.tsx  firebase.ts  mockData.ts  translations.ts
(+17 files in other folders)
